# FBPINNs

./: README.md  pyproject.toml
.github/workflows/: run_tests.yml
elm/: elms.py  optimisers.py  solvers.py  trainers.py
elm-rrqr-paper/: Paper plots.ipynb  README.md  main.py  plot.py  problems.py  run.sh
elm-rrqr-paper/social-media/: Paper summary plots.ipynb
examples/: 1. Defining your own problem - 1D harmonic oscillator.ipynb  2. Using hard constraints - 1D harmonic oscillator.ipynb  3. Solving inverse problems - 1D harmonic oscillator.ipynb  4. Using subdomain scheduling - (1+1)D Burgers' equation.ipynb  Defining your own problem.ipynb
fbpinns/: Paper plots.ipynb  active_schedulers.py  analysis.py  boundary_conditions.py  constants.py  constantsBase.py  constants_base.py  decompositions.py  decompositions_base.py  domains.py  domainsBase.py  losses.py  main.py  models.py  networks.py  paper_main_1D.py  paper_main_2D.py  paper_main_3D.py  paper_plots.py  plot_domain.py  plot_main.py  plot_main_1D.py  plot_main_2D.py  plot_main_3D.py  plot_trainer.py  plot_trainer_1D.py  plot_trainer_2D.py  plot_trainer_3D.py  problems.py  schedulers.py  self_adaptive.py  trainers.py  trainersBase.py  trainers_base.py  windows.py
fbpinns/traditional_solutions/: helmholtz_solver.py
fbpinns/util/: io.py  (+5 more)
multilevel-paper/: Paper plots.ipynb  README.md  fourier_pinn_ablation.py  main.py  plot.py  problems.py  run.sh
seismic-cpml/: seismic_CPML_2D_pressure_second_order.py  seismic_CPML_helper.py
shared_modules/: helper.py  io_utils.py  multiprocess.py
tests/: run.py
(+3 files in other folders)
